<resources>
    <string name="app_name">Love Sex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Кама рулетка</string>
    <string name="menu_gallery">Грязные сценки</string>
    <string name="menu_slideshow">Секс задания</string>
    <string name="btn_sex_positions_start">GO</string>
    <string name="sex_positions_title">Кама рулетка</string>
    <string name="sex_poses_detail_title">Подробности</string>
    <string name="sex_positions_pose_69_title">69</string>
    <string name="sex_positions_pose_69_level">Обычная</string>
    <string name="sex_positions_pose_69_notification">Если бы все сексуальные позы затеяли соревнование, у позы "69"  априори была бы фора.</string>
    <string name="sex_positions_pose_69_description">Поза "69" хороша для женщин, которые любят быть сверху. Находясь сверху в позе "69",  девушка не страдает от веса тела мужчины, который может потерять над собой контроль и ненароком причинить если не боль, то неудобства. К тому же, находясь сверху, гораздо легче контролировать глубину проникновения члена. Впрочем, сверху или снизу - это не принципиально  и, если мужчина ненамного больше женщины (и по весу, и по, простите, длине тела), то запросто можно и поменяться.</string>
    <string name="sex_positions_clip_pose_title">Скрепка</string>
    <string name="sex_positions_clip_pose_level">Обычная</string>
    <string name="sex_positions_clip_pose_notification">Именование вполне логичное, так как положение партнёров напоминает офисную скрепку.</string>
    <string name="sex_positions_clip_pose_description">Мужчина лежит на спине, ноги вместе. Женщина садится сверху, отклоняется назад и опирается на руки. Тут ты тоже можешь распоряжаться своими руками как хочешь (хотя чего как хочешь, дотянешься ты только до клитора — если, конечно, ты не Бумер).</string>
    <string name="sex_positions_column_pose_title">Колонна</string>
    <string name="sex_positions_column_pose_level">Обычная</string>
    <string name="sex_positions_column_pose_notification">Может стать начальной для того, чтобы из неё переходить в другие, более сложные и интересные позы.</string>
    <string name="sex_positions_column_pose_description">Оба партнера стоят, женщина — спиной к партнеру, он для баланса держит ее руками. Мужчина входит в партнершу сзади, а она чуть наклоняется вперед. А еще она может опереться на стену или на стол, чтобы достичь более глубокого проникновения и вообще облегчить задачу..</string>
    <string name="sex_positions_dog_style_pose_title">По собачьи</string>
    <string name="sex_positions_dog_style_pose_level">Обычная</string>
    <string name="sex_positions_dog_style_pose_notification">Секс в позе «По-собачьи» пробовали, наверное, все, но некоторые просто не знали, как правильно называется эта позиция.</string>
    <string name="sex_positions_dog_style_pose_description">Абсолютная классика, в репертуаре любой подруги. Она становится на четвереньки, а он становится сзади на колени, поддерживая ее за бедра. Только не на ковре, чувак!</string>
    <string name="sex_positions_fun_pose_title">Веер</string>
    <string name="sex_positions_fun_pose_level">Обычная</string>
    <string name="sex_positions_fun_pose_notification">ПОЗА ВЕЕР СЕКС — МОЖНО И АНАЛ</string>
    <string name="sex_positions_fun_pose_description">Женщина становится спиной к партнеру и опирается локтями на что-нибудь: например, на стул. Мужчина подходит сзади. Чем хороша поза? У тебя свободны руки, и поза обеспечивает глубокое проникновение, а еще подходит для анального секса.</string>
    <string name="sex_positions_imperator_pose_title">Император</string>
    <string name="sex_positions_imperator_pose_level">Обычная</string>
    <string name="sex_positions_imperator_pose_notification">Вы словно созданы друг для друга – он дополняет свою избранницу, она восхищает его и вдохновляет на подвиги.</string>
    <string name="sex_positions_imperator_pose_description">Уверены, эта поза окажется для многих новой: женщина лежит на боку, мужчина, стоя на коленях и расставив ноги как ему удобнее, пристраивается сзади. В этой позе проникновение будет умеренным (для женщин это может быть актуально, если у партнера достоинство больших размеров), что компенсируется стимуляцией эрогенной зоны груди, ягодиц и клитора.</string>
    <string name="sex_positions_kazanova_pose_title">Казанова</string>
    <string name="sex_positions_kazanova_pose_level">Обычная</string>
    <string name="sex_positions_kazanova_pose_notification">Эта поза очень проста в исполнении и не потребует от вас фантастической гибкости или просто циркового мастерства.</string>
    <string name="sex_positions_kazanova_pose_description">Мужчина также входит сзади в девушку, которая стоит более ровно, то есть вертикально, что позволяет больше стимулировать переднюю стенку влагалища, где расположена точка G. Поза является очень удобной для того, чтоб дополнительно ласкать клитор партнерши или держаться за женскую грудь. Партнеры могут плотно прижиматься друг к другу и чувствовать дыхание друг друга, что подарит паре особое ощущение близости и единства.</string>
    <string name="sex_positions_king_of_the_world_pose_title">Король Мира</string>
    <string name="sex_positions_king_of_the_world_pose_level">Обычная</string>
    <string name="sex_positions_king_of_the_world_pose_notification">Чувак, мы все ее обожаем, ведь в этом мемнт ощущаешь себя важаком всего мира</string>
    <string name="sex_positions_king_of_the_world_pose_description">Пусть он сядет на стул, а ты встанешь на колени. В этой позе ты можешь опираться о его колени и не испытывать неудобств. Ощущения можно сделать более острыми, если ты будешь поглаживать пальцами основание пениса и чувствительное место за мошонкой.</string>
    <string name="sex_positions_locked_pose_title">Замок</string>
    <string name="sex_positions_locked_pose_level">Обычная</string>
    <string name="sex_positions_locked_pose_notification">ПОЗА ЗАМОК УДОБНА ДЛЯ СЕКСА НА СТОЛЕ</string>
    <string name="sex_positions_locked_pose_description">В позе Замок ритм и глубину входа члена во влагалище контролирует мужчина. Женщина же может просто расслабиться и одаривать ласками своего партнёра. Для большего удобства мужчина также может упереться руками о стол или обнять свою партнёршу за талию. 7 поза в сексе позволяет уложить её на спину, особенно это подойдёт при достижении оргазма мужчиной, когда его движения станут быстрее. Девушка в позе замок в сексе может продержаться достаточно долго, если правильно зафиксирует положение.</string>
    <string name="sex_positions_perched_pose_title">Сидя на насесте</string>
    <string name="sex_positions_perched_pose_level">Обычная</string>
    <string name="sex_positions_perched_pose_notification">Поза 59 в сексе идеально подходит для продолжительного полового акта, а также для частого применения. Она не требует особой физической подготовки и комфортна для обоих партнеров. Остаётся просто расслабиться и уединиться со своей любимой второй половинкой.</string>
    <string name="sex_positions_perched_pose_description">Мужчина садится на стул, а женщина — ему на колени, повернувшись к партнеру спиной. Она упирается ногами в пол и двигается вверх-вниз. Руки у женщины свободны, так что ими она может стимулировать свои клитор и грудь. Чтобы облегчить проникновение, она может откинуться назад.</string>
    <string name="sex_positions_rider_pose_title">Наездница</string>
    <string name="sex_positions_rider_pose_level">Обычная</string>
    <string name="sex_positions_rider_pose_notification">Самая лучшая поза чтоб перевести дыхание и немного расслабиться перед новым порывом страсти</string>
    <string name="sex_positions_rider_pose_description">В позе наездницы мужчина садится, скрестив ноги, и отклоняется назад, опираясь руками на кровать за спиной. Женщина садится сверху, обнимает его бедрами и двигается вверх-вниз. Так она может управлять скоростью и глубиной проникновения.
Может, будет удобнее облокотиться на стену или на спинку кровати и помочь ей двигаться вверх-вниз — или просто расслабиться, пока она выполняет всю эту тяжелую работу.</string>
    <string name="sex_positions_roc_n_roll_pose_title">Рок-н-Рол</string>
    <string name="sex_positions_roc_n_roll_pose_level">Обычная</string>
    <string name="sex_positions_roc_n_roll_pose_notification">Отлично подходит для красивого финального аккорда, если вы начали заниматься сексом в обычной позе мужчина сверху.</string>
    <string name="sex_positions_roc_n_roll_pose_description">Как ты понимаешь, это не первоначальное название позы. Но оно чертовски круто звучит! Женщина ложится на спину и вытягивает ноги так, чтобы они оказались над головой (как будто собирается сделать кувырок назад). Мужчина садится на колени перед ней.</string>
    <string name="sex_positions_two_story_pose_title">Подсвечник</string>
    <string name="sex_positions_two_story_pose_level">Обычная</string>
    <string name="sex_positions_two_story_pose_notification">Сложно встретить человека который устроит вас и в жизни, и в постели, если вам все же удалось, цените то, что имеете, отдавайтесь ему всецело, любите безвозмездно и удовлетворяйте во всех отношениях</string>
    <string name="sex_positions_two_story_pose_description">Мужчина ложится на спину, а женщина ложится сверху спиной к нему. Она откидывается назад на локти, прижимаясь спиной к его груди.
Ногами женщина опирается на колени мужчины, а мужчина двигается внутри нее. Поза хороша для перехода в другую позу — это получится вполне естественно.</string>
    <string name="dirty_scenes_title">Грязные сценки</string>
    <string name="sex_missions_title">Ceкс задания</string>
    <string name="sex_mission_pack_newbie_title">Для новичков</string>
    <string name="sex_mission_pack_newbie_description">позиция требует\nакробатических\nспособностей!</string>
    <string name="sex_mission_pack_advanced_title">Для опытных</string>
    <string name="sex_mission_pack_advanced_description">позиция требует\nакробатических\nспособностей!</string>
    <string name="sex_mission_pack_extreme_title">Для экстрима</string>
    <string name="sex_mission_pack_extreme_description">позиция требует\nакробатических\nспособностей!</string>
    <string name="sex_missions_tab_newbie_title">Новичок</string>
    <string name="sex_missions_tab_advanced_title">Опытный</string>
    <string name="sex_missions_tab_extreme_title">Экстримал</string>
    <string name="sex_missions_detail_title">Задания</string>
    <string name="sex_position_purchase_offer_title">Разблокируйте\nвсе карты</string>
    <string name="sex_position_ads_offer_title">Разблокируйте\nодну карту бесплатно</string>
    <string name="sex_position_purchase_offer_items_in_pack">39 карточек</string>
    <string name="sex_position_ads_offer_items_in_pack">1 случайная карта</string>
    <string name="sex_position_ads_offer_btn_free">БЕСПЛАТНО</string>
    <string name="sex_position_purchase_offer_description">Добавьте пикантности вашему сексу благодаря необычным и более захватывающим позам. Эта версия идеально подойдет для празднования оперделенной даты. Не волнуйтесь! Приложение точно подскажет, что делать</string>
    <string name="dirty_scene_school">Учитель\nи двоечница</string>
    <string name="dirty_scene_police">Вы\nарестованы</string>
    <string name="dirty_scene_nurse">Случай\nв больнице</string>
    <string name="dirty_scene_first_date">Первое\nсвидание</string>
    <string name="dirty_scene_airplane">Страсть\nв воздухе</string>
    <string name="dirty_scene_maid">Плохая\nдомохозяйка</string>
</resources>