<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="araikovich.inc.lovesex.ui.sex_positions.SexPositionsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_self"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/anim_activity_open_enter"
            app:exitAnim="@anim/anim_activity_open_exit"
            app:popEnterAnim="@anim/anim_activity_open_enter"
            app:popExitAnim="@anim/anim_activity_open_exit" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="araikovich.inc.lovesex.ui.dirty_scenes.DirtyScenesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_dirty_scenes" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="araikovich.inc.lovesex.ui.sex_missions.SexMissionsPacksFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_sex_missions_packs" />
</navigation>