<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/item_premium_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_horizontal"
                android:text="@string/sex_position_ads_offer_title"
                android:textColor="@color/white"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/background_image"
                android:layout_width="120dp"
                android:layout_height="165dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/item_default_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_question"
                android:layout_width="124dp"
                android:layout_height="131dp"
                app:layout_constraintBottom_toBottomOf="@+id/background_image"
                app:layout_constraintEnd_toEndOf="@+id/background_image"
                app:layout_constraintStart_toStartOf="@+id/background_image"
                app:layout_constraintTop_toTopOf="@+id/background_image"
                app:srcCompat="@drawable/question" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cards_in_pack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sex_position_ads_offer_items_in_pack"
                android:textColor="@color/white"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/background_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="23dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_horizontal"
                android:text="@string/sex_position_purchase_offer_description"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cards_in_pack" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_purchase"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_purchase_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_video"
                    android:layout_width="29dp"
                    android:layout_height="22dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_btn_text"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_video" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_btn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/sex_position_ads_offer_btn_free"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_video"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>